@@ -17,15 +17,15 @@
 <TD>&nbsp;&nbsp;<A HREF="#-default">-default</A></TR>
 </TR>
 <TR>
-<TD>&nbsp;&nbsp;<A HREF="#-homogeneous">-homogeneous</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="#-homogeneous">-homogeneous</A></TD>
 <TD>&nbsp;&nbsp;<A HREF="#-orient">-orient</A></TR>
 </TR>
 <TR>
-<TD>&nbsp;&nbsp;<A HREF="#-padx">-padx</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="#-padx">-padx</A></TD>
 <TD>&nbsp;&nbsp;<A HREF="#-pady">-pady</A></TR>
 </TR>
 <TR>
-<TD>&nbsp;&nbsp;<A HREF="#-spacing">-spacing</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="#-spacing">-spacing</A></TD>
 <TD>&nbsp;&nbsp;<A HREF="#-state">-state</A></TR>
 </TABLE></DD>
 </DL>
